--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "express": "^4.16.3",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.9",
     "multer": "^1.4.2",
     "node-localstorage": "^2.2.1",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
